Created Phone View
Created phone view , added additional pathes to phones list and phones detail. Created HTML files referred to phone detail and phone list. Deleted Measurmaent model and it's references

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -48,7 +48,7 @@
             <div class="header-overlay">
                 <div class="nav-container">
 
-                    <a href="{% url 'shop:category_list' %}" class="logo"><img src="{% static 'img/logo.png' %}"
+                    <a href="{% url 'shop:product_list' %}" class="logo"><img src="{% static 'img/logo.png' %}"
                             alt=""></a>
 
                     <!-- НАВИГАЦИЯ -->
@@ -63,7 +63,7 @@
                             </form>
                             <div class="header_left">
                                 <div class="header_category">
-                                    <a href="{% url 'shop:categories' %}">Toifalar</a>
+                                    <a href="{% url 'shop:phones' %}">Телефоны</a>
                                 </div>
                                 <a href="{% url 'cart:cart_detail' %}">
                                     <div class="korzina" href="#">
